# e-commerce

./: README.md  test-requirements.txt
product_template_multi_link/: README.rst  __manifest__.py
product_template_multi_link/models/: product_template.py  product_template_link.py
product_template_multi_link/readme/: CONTRIBUTORS.md
product_template_multi_link/tests/: test_product_template_link.py  test_product_template_link_type.py  test_product_template_linker.py
product_template_multi_link/views/: action.xml  product_template_link_type.xml  product_template_link_view.xml
product_template_multi_link/wizards/: product_template_linker.xml
product_template_multi_link_date_span/: README.rst  __manifest__.py
product_template_multi_link_date_span/models/: product_template_link.py  product_template_link_type.py
product_template_multi_link_date_span/readme/: CONTRIBUTORS.md  CREDITS.md  DESCRIPTION.md
product_template_multi_link_date_span/tests/: test_product_template_link_date_span.py
product_template_multi_link_date_span/views/: product_template_link_type_view.xml  product_template_link_view.xml
product_variant_multi_link/: README.rst  __manifest__.py
product_variant_multi_link/models/: product_product.py  product_template_link.py
setup/_metapackage/: pyproject.toml
website_sale_checkout_skip_payment/: README.rst
website_sale_hide_price/: README.rst  __manifest__.py
website_sale_product_attribute_value_filter_existing/: README.rst  __manifest__.py
website_sale_product_reference_displayed/: README.rst  __manifest__.py
(+88 files in other folders)
