[project]
name = "odoo-addons-oca-e-commerce"
version = "18.0.20241028.1"
dependencies = [
    "odoo-addon-website_sale_checkout_skip_payment==18.0.*",
    "odoo-addon-website_sale_product_attribute_value_filter_existing==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
